fix spacing

--- a/css/stylehomepage.css
+++ b/css/stylehomepage.css
@@ -326,6 +326,7 @@ hr {
         position: static;
         font-size: 16px;
         border: none;
+        padding-bottom: 20px;
     }
     .third {
         width: 90vw;
